--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "godotTools.editorPath.godot4": "c:\\Users\\41384638\\OneDrive - New College Durham\\Desktop\\Godot_v4.3-stable_win64.exe"
+    "godotTools.editorPath.godot4": "c:\\Users\\User\\Desktop\\Godot_v4.3-stable_win64.exe"
 }
